--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
                   </div>
                 </div>
                 </a>
-                <a href ="https://github.com/Janvishah20">
+                <a href ="https://github.com/Janviishah20">
                 <div class="flex flex-col items-center gap-4 text-center">
                   <div class="relative w-48 h-48">
                     <div class="w-full h-full rounded-full bg-center bg-no-repeat bg-cover shadow-lg"
@@ -181,3 +181,4 @@
 
 
 </html>
+
