--- a/modulecontent2.HTML
+++ b/modulecontent2.HTML
@@ -148,10 +148,12 @@
                             alt="Lush green forest with diverse vegetation and sunlight filtering through the canopy, showcasing biodiversity"
                             class="w-full h-64 object-cover"
                         />
+<button
+            class="flex min-w-[90px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-11 px-5 bg-green-600 text-white text-base font-bold tracking-wide shadow-sm hover:bg-green-700 transition-colors">
+            <span class="truncate"> Modules and Visualizations</span>
+          </button>
                         <div class="p-6">
-                            <h3 class="text-xl font-semibold mb-3 text-green-800 dark:text-green-300">
-                             Modules and Visualizations
-                            </h3>
+                           
                             <p class="text-gray-600 dark:text-gray-300">
                                 This visualization shows the positive effects of conservation efforts on natural habitats and biodiversity.
                             </p>
@@ -400,4 +402,5 @@
         });
     </script>
 </body>
+
 </html>
