--- a/help3.html
+++ b/help3.html
@@ -213,11 +213,11 @@
         <i class="fas fa-link icon-leaf mr-2"></i> Useful Links
       </h2>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-        <a href="#start-learning" class="text-center hover:text-env-green-700 transition-colors">
+        <a href="homepage2.html" class="text-center hover:text-env-green-700 transition-colors">
           <i class="fas fa-book text-3xl icon-leaf mb-2"></i>
           <p class="font-semibold">Start Learning</p>
         </a>
-        <a href="#eco-fun-zone" class="text-center hover:text-env-green-700 transition-colors">
+        <a href="games.html" class="text-center hover:text-env-green-700 transition-colors">
           <i class="fas fa-gamepad text-3xl icon-leaf mb-2"></i>
           <p class="font-semibold">Eco Fun Zone</p>
         </a>
@@ -323,3 +323,4 @@
 </html>
 </content>
 </create_file>
+
