--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </button>
         <div id="dropdownMenu" class="dropdown-menu">
           <a href="#">Profile</a>
-          <a href="#">Contact</a>
+          <a href="help3.html">Help & Support</a>
           <a href="#">Dashboard</a>
           <a href="#">Badges</a>
           <a href="#">Logout</a>
@@ -179,8 +179,8 @@
           <h3>Quick Links</h3>
           <ul>
             <li><a href="index.html">🏠 Home</a></li>
-            <li><a href="terms.html">📖 About</a></li>
-            <li><a href="help.html">🧑‍💻 Help and Support</a></li>
+            <li><a href="about.html">📖 About</a></li>
+            <li><a href="help3.html">🧑‍💻 Help and Support</a></li>
           </ul>
         </div>
 
@@ -272,5 +272,6 @@
     </script>
   </body>
 </html>
+
 
 
