--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     onload="this.rel='stylesheet'" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <meta charset="utf-8" />
-  <title>Stitch Design</title>
+  <title>About Greenify </title>
   <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon" />
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 </head>
@@ -181,4 +181,5 @@
 
 
 </html>
+
 
