--- a/homepage2.html
+++ b/homepage2.html
@@ -18,7 +18,7 @@
   </head>
   <body class="bg-gray-900 text-white">
     <!-- Menu Button -->
-    <!-- <button
+     <button
       class="menu-toggle fixed top-4 left-4 z-50 bg-gray-800 text-white p-2 rounded md:hidden"
     >
       Menu 
@@ -624,6 +624,7 @@
     </script>
   </body>
 </html>
+
 
 
 
