--- a/homepage2.html
+++ b/homepage2.html
@@ -22,7 +22,7 @@
       class="menu-toggle fixed top-4 left-4 z-50 bg-gray-800 text-white p-2 rounded md:hidden"
     >
       Menu 
-    </button> -->
+    </button> 
 
     <div class="relative flex size-full min-h-screen">
       <!-- Sidebar -->
@@ -624,6 +624,7 @@
     </script>
   </body>
 </html>
+
 
 
 
