--- a/terms.html
+++ b/terms.html
@@ -63,5 +63,8 @@
       If you have any questions about these Terms, contact us at
       <strong>edutechindia03@gmail.com</strong>.
     </p>
+    <script src="theme.js"></script>
+
   </body>
 </html>
+
