--- a/WaterPollution.html
+++ b/WaterPollution.html
@@ -315,6 +315,8 @@ function submitQuiz(){
   document.querySelector(".controls").style.display="none";
 }
 </script>
+<script src="theme.js"></script>
 
 </body>
+
 </html>
