--- a/calendar.html
+++ b/calendar.html
@@ -128,6 +128,8 @@
             renderCalendar(year, month);
         });
     </script>
+    <script src="theme.js"></script>
+
 </body>
 </html>
 </content>
