--- a/dustbin.html
+++ b/dustbin.html
@@ -318,6 +318,8 @@ function submitQuiz(){
   document.querySelector(".controls").style.display="none";
 }
 </script>
+<script src="theme.js"></script>
 
 </body>
+
 </html>
