--- a/news.html
+++ b/news.html
@@ -105,5 +105,8 @@
         <a href="homepage2.html">← Back to Homepage</a>
       </div>
     </div>
+    <script src="theme.js"></script>
+
   </body>
 </html>
+
