--- a/quiz.html
+++ b/quiz.html
@@ -252,5 +252,8 @@
     function backMenu(){document.getElementById("quizArea").style.display="none";document.getElementById("menu").style.display="grid";}
     document.getElementById("modeBtn").onclick=()=>{document.body.classList.toggle("dark");document.getElementById("modeBtn").textContent=document.body.classList.contains("dark")?"☀ Light":"🌙 Dark";}
   </script>
+  <script src="theme.js"></script>
+
 </body>
 </html>
+
