--- a/index.html
+++ b/index.html
@@ -192,10 +192,28 @@
 
         <div class="footer-section social">
           <h3>Follow Us</h3>
+  <div class="social-media">
           <div class="social-icons">
             <a href="https://www.instagram.com/greenifyindia01/">
               <span><i class="fa-brands fa-instagram"></i></span>
             </a>
+          </div>
+          <div class="social-icons">
+            <a href="#">
+              <span><i class="fa-brands fa-linkedin"></i></span>
+            </a>
+          </div>
+          <div class="social-icons">
+            <a href="#">
+              <span><i class="fa-brands fa-github"></i></span>
+            </a>
+        </div>
+         <div class="social-icons">
+            <a href="#">
+              <span><i class="fa-brands fa-x-twitter"></i></span>
+            </a>
+        </div>
+        </div>
           </div>
         </div>
       </div>
@@ -272,6 +290,7 @@
     </script>
   </body>
 </html>
+
 
 
 
