--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a href="help3.html">Help & Support</a>
           <a href="#">Dashboard</a>
           <a href="#">Badges</a>
-          <a href="#">About us </a>
+          <a href="about.html">About us </a>
         </div>
       </div>
     </header>
@@ -290,6 +290,7 @@
     </script>
   </body>
 </html>
+
 
 
 
