--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
                   </div>
                 </div>
               </a>
-              <a href ="https://github.com/">
+              <a href ="https://github.com/aaravchauhan211">
                 <div class="flex flex-col items-center gap-4 text-center">
                   <div class="relative w-48 h-48">
                     <div class="w-full h-full rounded-full bg-center bg-no-repeat bg-cover shadow-lg"
@@ -183,6 +183,7 @@
 
 
 </html>
+
 
 
 
