--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
                 <div class="flex flex-col items-center gap-4 text-center">
                   <div class="relative w-48 h-48">
                     <div class="w-full h-full rounded-full bg-center bg-no-repeat bg-cover shadow-lg"
-                      style='background-image: url("DSC_0140.JPG");'>
+                      style='background-image: url("niyam1.jpg");'>
                     </div>
                   </div>
                   <div>
@@ -149,7 +149,7 @@
                 <div class="flex flex-col items-center gap-4 text-center">
                   <div class="relative w-48 h-48">
                     <div class="w-full h-full rounded-full bg-center bg-no-repeat bg-cover shadow-lg"
-                      style='background-image: url("logo.jpg");'>
+                      style='background-image: url("aarav.jpg");'>
                     </div>
                   </div>
                   <div>
@@ -183,6 +183,7 @@
 
 
 </html>
+
 
 
 
