--- a/news.html
+++ b/news.html
@@ -21,15 +21,14 @@
           <!-- Card 1 -->
           <div class="news-card">
             <img
-              src="https://picsum.photos/100/100?random=1"
+              src="news1.jpg"
               alt="Alice"
               class="news-img"
             />
             <div class="news-content">
-              <h3>Alice just crossed 1200 points! 🎉</h3>
+              <h2>Air Conditioner will become the highest Greenhouse Gas (GHG)-emitting appliance in the country, shows survey</h2>
               <p>
-                Alice continues her winning streak and remains at the top of the
-                leaderboard this week.
+                A recent survey highlights that air conditioners are set to become the highest greenhouse gas (GHG)-emitting appliance in the country. With rising temperatures, rapid urbanization, and increasing demand for cooling, the use of air conditioners has grown significantly. However, their heavy reliance on electricity and the release of hydrofluorocarbons (HFCs) — potent greenhouse gases — contribute massively to climate change. If left unchecked, this trend could worsen the carbon footprint of households and commercial spaces, making it a major challenge for sustainability. The findings emphasize the urgent need for energy-efficient cooling technologies, eco-friendly refrigerants, and awareness among consumers to reduce the environmental impact of air conditioning.  
               </p>
             </div>
           </div>
@@ -37,15 +36,14 @@
           <!-- Card 2 -->
           <div class="news-card">
             <img
-              src="https://picsum.photos/100/100?random=2"
+              src="news2.jpg"
               alt="Bob"
               class="news-img"
             />
             <div class="news-content">
-              <h3>Bob won the weekly quiz challenge 🏅</h3>
+              <h2>As the lights stay on, birds are staying up past their bedtime</h2>
               <p>
-                Bob showed his brilliance by answering all questions correctly
-                in record time.
+                Artificial lighting is increasingly disrupting the natural behavior of birds, keeping them awake long past their usual bedtime. Streetlights, building lights, and other sources of illumination interfere with their circadian rhythms, confusing them about day and night. This not only affects their sleep patterns but also disturbs essential activities such as feeding, migration, and reproduction. Over time, such disruptions can harm bird populations and upset ecological balance. The issue highlights the need for responsible lighting practices, like reducing unnecessary nighttime illumination and adopting bird-friendly lighting solutions, to protect wildlife while meeting human needs.
               </p>
             </div>
           </div>
@@ -53,15 +51,14 @@
           <!-- Card 3 -->
           <div class="news-card">
             <img
-              src="https://picsum.photos/100/100?random=3"
+              src="news3.jpg"
               alt="Charlie"
               class="news-img"
             />
             <div class="news-content">
-              <h3>Charlie maintained Top 3 for 2 weeks straight 🔥</h3>
+              <h2>World Ozone Day: Earth’s protective layer on track to return to 1980s levels by mid-century, says WMO</h2>
               <p>
-                Consistency is key! Charlie is becoming a tough competitor to
-                beat.
+              On World Ozone Day, the World Meteorological Organization (WMO) reported that Earth’s protective ozone layer is steadily healing and is on track to return to 1980s levels by the middle of this century. This recovery is largely the result of global efforts under the Montreal Protocol, which successfully phased out the production and use of ozone-depleting substances. The ozone layer plays a critical role in shielding life on Earth from harmful ultraviolet radiation, which can cause skin cancer, cataracts, and damage to ecosystems. The encouraging progress serves as a powerful reminder that collective international action can effectively address environmental challenges and safeguard the planet for future generations.
               </p>
             </div>
           </div>
@@ -69,15 +66,14 @@
           <!-- Card 4 -->
           <div class="news-card">
             <img
-              src="https://picsum.photos/100/100?random=4"
+              src="news4.jpg"
               alt="Game"
               class="news-img"
             />
             <div class="news-content">
-              <h3>New game levels are coming this weekend 🚀</h3>
+              <h2>India's sustainable debt market is experiencing growth, with Green & Blue Bonds becoming a significant driver of sustainable finance, according to a recent analysis</h2>
               <p>
-                Get ready for brand-new challenges, puzzles, and exciting
-                surprises.
+              India’s sustainable debt market is witnessing steady growth, with Green and Blue Bonds emerging as key drivers of sustainable finance, according to a recent analysis. These bonds are channeling investments into projects that promote clean energy, climate resilience, sustainable water management, and biodiversity protection. The rising interest in such instruments reflects both investor confidence and the country’s commitment to meeting its climate goals and sustainable development targets. As awareness and demand increase, Green and Blue Bonds are expected to play a crucial role in mobilizing capital for low-carbon infrastructure and environmentally responsible initiatives, strengthening India’s transition toward a greener economy.
               </p>
             </div>
           </div>
@@ -85,15 +81,14 @@
           <!-- Card 5 -->
           <div class="news-card">
             <img
-              src="https://picsum.photos/100/100?random=5"
+              src="news5.jpg"
               alt="Bonus"
               class="news-img"
             />
             <div class="news-content">
-              <h3>Claim your daily bonus points 🎁</h3>
+              <h2>The Seva Parv, scheduled to start on September 17, will highlight the importance of collective effort in addressing climate change and related environmental issues.</h2>
               <p>
-                Log in daily to collect rewards and climb up the leaderboard
-                faster!
+                The upcoming Seva Parv, beginning on September 17, will emphasize the power of collective action in tackling climate change and pressing environmental challenges. The event aims to encourage individuals, communities, and organizations to come together and contribute through sustainable practices, awareness campaigns, and on-ground initiatives. By focusing on unity and shared responsibility, Seva Parv seeks to inspire long-term behavioral change and highlight that addressing climate issues requires not just policy interventions, but also active participation from every section of society.
               </p>
             </div>
           </div>
@@ -109,4 +104,3 @@
 
   </body>
 </html>
-
