--- a/homepage2.html
+++ b/homepage2.html
@@ -581,9 +581,12 @@
             <span>👥 ${activity.participants}</span>
           </div>
         </div>
-        <button class="mt-4 bg-black text-white py-2 px-3 rounded-lg font-semibold text-sm sm:text-base">
-          Start Activity
-        </button>
+       <button 
+  class="mt-4 bg-black text-white py-2 px-3 rounded-lg font-semibold text-sm sm:text-base" 
+  onclick="window.location.href='startpage.html'">
+  Start Activity
+</button>
+
       </div>
     `;
         });
