--- a/homepage2.html
+++ b/homepage2.html
@@ -61,7 +61,7 @@
             >News 📰</a
           >
           <a
-            href="modules.html"
+            href="modulecontent2.HTML"
             class="menu-item block py-2 px-3 rounded hover:bg-green-200 transition"
             >Modules 📑</a
           >
@@ -626,3 +626,4 @@
     </script>
   </body>
 </html>
+
