--- a/index.html
+++ b/index.html
@@ -21,14 +21,17 @@
   </head>
   <body>
     <header>
-      <img src="logo-modified.png" alt="Greenify Logo" class="logo" />
-      <span class="text">Greenify</span>
+      <!-- Brand: Logo + Text -->
+      <div class="brand">
+        <img src="logo-modified.png" alt="Greenify Logo" class="logo" />
+        <span class="text">Greenify</span>
+      </div>
 
       <!-- Navigation -->
       <nav class="navigation" id="navMenu">
         <a href="home.html">Home</a>
         <a href="signup.html">Signup</a>
-        <a href="about.html">About</a>
+        <a href="terms.html">About</a>
       </nav>
 
       <!-- Theme Toggle Button -->
@@ -41,10 +44,10 @@
         </button>
         <div id="dropdownMenu" class="dropdown-menu">
           <a href="#">Profile</a>
-          <a href="help3.html">Help & Support</a>
+          <a href="#">Contact</a>
           <a href="#">Dashboard</a>
           <a href="#">Badges</a>
-          <a href="about.html">About us </a>
+          <a href="#">Logout</a>
         </div>
       </div>
     </header>
@@ -290,6 +293,7 @@
     </script>
   </body>
 </html>
+
 
 
 
