--- a/homepage2.html
+++ b/homepage2.html
@@ -13,7 +13,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="images/logo-modified-removebg-preview.png"
+      href="logo-modified-removebg-preview.png"
     />
   </head>
   <body class="bg-green-50 text-gray-900">
@@ -25,7 +25,7 @@
       >
         <div class="p-4 flex items-center gap-2">
           <img
-            src="images/logo-modified-removebg-preview.png"
+            src="logo-modified-removebg-preview.png"
             alt="Logo"
             class="h-10 w-10 rounded-lg"
           />
@@ -115,7 +115,7 @@
                 alt="User"
                 class="w-8 h-8 rounded-full"
               />
-              <span>Jane Doe</span>
+              <span>Technosapiens</span>
               <span class="material-symbols-outlined"></span>
             </button>
 
@@ -626,4 +626,5 @@
     </script>
   </body>
 </html>
+
 
