--- a/module3.html
+++ b/module3.html
@@ -26,11 +26,10 @@
             <header
                 class="flex items-center justify-between whitespace-nowrap border-b border-solid border-b-[#e0e7e0] px-10 py-4">
                 <div class="flex items-center gap-3 text-[#111811]">
-                    <span class="material-symbols-outlined text-[#228B22] text-3xl">
-                        eco
-                    </span>
-                    <h2 class="text-[#111811] text-xl font-bold leading-tight tracking-[-0.015em]">Greenify</h2>
-                </div>
+    <img src="logo-modified.png" alt="Greenify Logo" class="h-10 w-10 rounded-lg" />
+    <h2 class="text-[#111811] text-xl font-bold leading-tight tracking-[-0.015em]">Greenify</h2>
+</div>
+
                 <div class="flex flex-1 justify-center gap-12 text-[#374137]">
                     <a class="text-base font-medium leading-normal hover:text-[var(--primary-color)] transition-colors"
                         href="homepage2.html"> Home</a>
@@ -127,13 +126,7 @@
                             </div>
                         </div>
                         </a>
-                        <a href="#">
-                        <div
-                            class="flex flex-col items-center justify-center gap-4 rounded-lg bg-[#F0FDF4] border-2 border-dashed border-[#17cf17] shadow-sm hover:shadow-lg transition-shadow duration-300 overflow-hidden group cursor-pointer hover:bg-[#E6F9E6]">
-                            <span class="material-symbols-outlined text-5xl text-[#17cf17]">add_circle</span>
-                            <h3 class="text-[#111811] text-lg font-bold">Add Module</h3>
-                        </div>
-                        </a>
+                        
                     </div>
                 </div>
             </div>
@@ -146,6 +139,7 @@
 
 
 </html>
+
 
 
 
