--- a/quiz.html
+++ b/quiz.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,17 +20,19 @@
     body{margin:0;font-family:Inter,system-ui,sans-serif;background:var(--bg-light);color:var(--text-light);transition:background .4s,color .3s;background-attachment:fixed;}
     body.dark{background:var(--bg-dark);color:var(--text-dark);}
     .wrap{max-width:1100px;margin:auto;padding:20px;}
-    header{display:flex;justify-content:space-between;align-items:center;margin-bottom:20px;}
-    h1{margin:0;font-size:26px;}
-    .toggle{cursor:pointer;padding:6px 12px;border-radius:8px;border:1px solid var(--outline-light);background:var(--card-light);}body.dark .toggle{border:1px solid var(--outline-dark);background:var(--card-dark);color:var(--text-dark);}
+    header{display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:10px;margin-bottom:20px;}
+    h1{margin:0;font-size:22px;}
+    .toggle,.backBtn{cursor:pointer;padding:6px 12px;border-radius:8px;border:1px solid var(--outline-light);background:var(--card-light);}
+    body.dark .toggle,body.dark .backBtn{border:1px solid var(--outline-dark);background:var(--card-dark);color:var(--text-dark);}
+    .btnGroup{display:flex;gap:10px;flex-wrap:wrap;}
     /* Menu */
     .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:20px;}
     .card{background:var(--card-light);border:1px solid var(--outline-light);border-radius:16px;padding:20px;box-shadow:0 4px 12px rgba(0,0,0,.2);}
     body.dark .card{background:var(--card-dark);border:1px solid var(--outline-dark);}
-    .card h2{margin:0;font-size:20px;display:flex;justify-content:space-between;align-items:center;}
+    .card h2{margin:0;font-size:18px;display:flex;justify-content:space-between;align-items:center;}
     .points{color:#fbbf24;font-weight:700;}
     .desc{margin:8px 0 12px;color:gray;font-size:14px;}
-    .startBtn{background:var(--accent);color:white;padding:10px;border:none;border-radius:8px;cursor:pointer;font-weight:600;}
+    .startBtn{background:var(--accent);color:white;padding:10px;border:none;border-radius:8px;cursor:pointer;font-weight:600;width:100%;}
     .startBtn:hover{background:var(--accent2);}
     /* Quiz area */
     #quizArea{display:none;}
@@ -60,15 +61,24 @@
     .review{display:none;margin-top:20px;padding:20px;border-radius:12px;background:var(--card-light);}
     body.dark .review{background:var(--card-dark);}
     .review table{width:100%;border-collapse:collapse;margin-top:10px;}
-    .review th,.review td{border-bottom:1px solid var(--outline-light);padding:6px;text-align:left;}
+    .review th,.review td{border-bottom:1px solid var(--outline-light);padding:6px;text-align:left;font-size:14px;}
     body.dark .review th,body.dark .review td{border-bottom:1px solid var(--outline-dark);}
+    /* Responsive */
+    @media(max-width:600px){
+      h1{font-size:18px;}
+      .card h2{font-size:16px;}
+      .startBtn{font-size:14px;}
+    }
   </style>
 </head>
 <body>
   <div class="wrap">
     <header>
       <h1>🌍 Environmental Quizzes</h1>
-      <button class="toggle" id="modeBtn">🌙 Dark</button>
+      <div class="btnGroup">
+        <a href="homepage2.html"><button class="backBtn">⬅ Back</button></a>
+        <button class="toggle" id="modeBtn">🌙 Dark</button>
+      </div>
     </header>
 
     <!-- Menu -->
@@ -103,8 +113,7 @@
   </div>
 
   <script>
-    const ALL=[
-      // Quiz 1
+    const ALL=[// Quiz 1
       {q:"Which is the largest mammal?",c:["Elephant","Blue Whale","Giraffe","Shark"],a:1},
       {q:"Plants make food by?",c:["Respiration","Photosynthesis","Digestion","Transpiration"],a:1},
       {q:"Capital of Japan?",c:["Beijing","Seoul","Tokyo","Bangkok"],a:2},
@@ -256,4 +265,3 @@
 
 </body>
 </html>
-
