--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leaderboard - Gamify</title>
     <link rel="stylesheet" href="leaderboard.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="logo-modified-removebg-preview.png"
+    />
   </head>
   <body>
     <div class="leaderboard-container">
@@ -12,7 +18,6 @@
 
       <!-- Leaderboard list -->
       <div class="leaderboard-list">
-        <!-- 1st Place -->
         <div class="leaderboard-item first">
           <div class="player">
             <span class="medal">🥇</span>
@@ -21,7 +26,6 @@
           <span class="score">1200 pts</span>
         </div>
 
-        <!-- 2nd Place -->
         <div class="leaderboard-item second">
           <div class="player">
             <span class="medal">🥈</span>
@@ -30,7 +34,6 @@
           <span class="score">1100 pts</span>
         </div>
 
-        <!-- 3rd Place -->
         <div class="leaderboard-item third">
           <div class="player">
             <span class="medal">🥉</span>
@@ -39,7 +42,6 @@
           <span class="score">950 pts</span>
         </div>
 
-        <!-- Others -->
         <div class="leaderboard-item other">
           <div class="player">
             <span class="badge">4</span>
@@ -96,9 +98,11 @@
           <span class="score">590 pts</span>
         </div>
       </div>
-    </div>
-    <script src="theme.js"></script>
 
+      <!-- Back to Home button -->
+      <a href="index.html" class="back-home">⬅ Back to Home</a>
+    </div>
+
+    <script src="theme.js"></script>
   </body>
 </html>
-
