--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <nav class="navigation" id="navMenu">
         <a href="home.html">Home</a>
         <a href="signup.html">Signup</a>
-        <a href="terms.html">About</a>
+        <a href="about.html">About</a>
       </nav>
 
       <!-- Theme Toggle Button -->
@@ -43,10 +43,10 @@
           <img src="https://i.pravatar.cc/40" alt="User" class="profile-pic" />
         </button>
         <div id="dropdownMenu" class="dropdown-menu">
-          <a href="#">Profile</a>
-          <a href="#">Contact</a>
-          <a href="#">Dashboard</a>
-          <a href="#">Badges</a>
+          <a href="profile.html">Profile</a>
+          <a href="help3.html">Help & Support</a>
+          <a href="dashboard.html">Dashboard</a>
+           <a href="about.html">About us </a>
           <a href="#">Logout</a>
         </div>
       </div>
@@ -293,6 +293,7 @@
     </script>
   </body>
 </html>
+
 
 
 
