--- a/homepage2.html
+++ b/homepage2.html
@@ -66,7 +66,7 @@
             >Modules 📑</a
           >
           <a
-            href="calender.html"
+            href="calendar.html"
             class="menu-item block py-2 px-3 rounded hover:bg-green-200 transition"
             >Calender 🗓️</a
           >
@@ -626,5 +626,6 @@
     </script>
   </body>
 </html>
+
 
 
