--- a/about.html
+++ b/about.html
@@ -18,8 +18,11 @@
     <div class="layout-container flex h-full grow flex-col">
       <header class="flex items-center justify-between whitespace-nowrap px-10 py-5 bg-white shadow-sm">
         <div class="flex items-center gap-3 text-[#2d392d]">
-          <span class="material-symbols-outlined text-4xl text-green-600">eco</span>
-          <h2 class="text-2xl font-bold tracking-tight">Greenify</h2>
+<div class="flex items-center gap-3 text-[#2d392d]">
+  <img src="logo-modified-removebg-preview.png" alt="Greenify Logo" class="h-10 w-10 object-contain" />
+  <h2 class="text-2xl font-bold tracking-tight">Greenify</h2>
+</div>
+
         </div>
         <div class="flex flex-1 justify-end gap-6 items-center">
           <nav class="flex items-center gap-6">
@@ -183,6 +186,7 @@
 
 
 </html>
+
 
 
 
