--- a/profile.html
+++ b/profile.html
@@ -104,7 +104,7 @@
             <p class="text-xs font-bold">Profile</p>
           </a>
           <a id="navHome"
-            class="flex flex-col items-center justify-end gap-1 text-[var(--primary-color)] cursor-pointer" href="#"
+            class="flex flex-col items-center justify-end gap-1 text-[var(--primary-color)] cursor-pointer" href="index.html"
             aria-current="page">
             <span class="material-symbols-outlined text-2xl"> home </span>
             <p class="text-xs font-bold">Home</p>
@@ -331,5 +331,6 @@
     });
   </script>
 </body>
+
 
 </html>
