--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
                   </div>
                   <div>
                     <p class="text-xl font-semibold text-[#2d392d]">Bhavya Shah</p>
-                    <p class="text-base text-gray-600">bhavya092007@gmail.com</p>
+                    <p class="text-base text-gray-600">sbhavya838@gmail.com</p>
                   </div>
                 </div>
               </a>
@@ -186,6 +186,7 @@
 
 
 </html>
+
 
 
 
