--- a/module3.html
+++ b/module3.html
@@ -36,6 +36,14 @@
                         href="homepage2.html"> Home</a>
                     <a class="text-base font-medium leading-normal text-[var(--primary-color)]" href="#">Modules</a>
                 </div>
+                       <!-- Back Button -->
+            <a href="modulecontent2.HTML">
+              <button
+                class="flex items-center px-4 py-2 rounded-full bg-gray-200 text-gray-800 hover:bg-gray-300 dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600 transition-all w-full sm:w-auto"
+              >
+                ⬅ Back
+              </button>
+            </a>
 
                 <div class="flex items-center gap-4">
                     <button
@@ -163,3 +171,4 @@
 </body>
 
 </html>
+
