--- a/leaderboard.html
+++ b/leaderboard.html
@@ -100,9 +100,10 @@
       </div>
 
       <!-- Back to Home button -->
-      <a href="index.html" class="back-home">⬅ Back to Home</a>
+      <a href="homepage2.html" class="back-home">⬅ Back to Home</a>
     </div>
 
     <script src="theme.js"></script>
   </body>
 </html>
+
