--- a/homepage2.html
+++ b/homepage2.html
@@ -127,7 +127,7 @@
                 >Profile</a
               >
               <a
-                href="helpandsupport.html"
+                href="help3.html"
                 class="block px-4 py-2 hover:bg-green-200"
                 >Help & Support</a
               >
@@ -626,6 +626,7 @@
     </script>
   </body>
 </html>
+
 
 
 
