--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+\\<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -106,4 +106,5 @@
     <script src="theme.js"></script>
   </body>
 </html>
+
 
