--- a/help3.html
+++ b/help3.html
@@ -100,6 +100,15 @@
   </style>
 </head>
 <body class="min-h-screen text-env-green-900">
+  <!-- Back Button -->
+            <a href="homepage2.html">
+              <button
+                class="flex items-center px-4 py-2 rounded-full bg-gray-200 text-gray-800 hover:bg-gray-300 dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600 transition-all w-full sm:w-auto"
+              >
+                ⬅ Back
+              </button>
+            </a>
+
   <div class="max-w-4xl mx-auto px-4 py-8">
     <!-- Welcome Message -->
     <section class="card">
@@ -325,5 +334,6 @@
 </html>
 </content>
 </create_file>
+
 
 
