--- a/index.html
+++ b/index.html
@@ -21,22 +21,24 @@
   </head>
   <body>
     <header>
+      <div class="group1">
       <!-- Brand: Logo + Text -->
       <div class="brand">
         <img src="logo-modified.png" alt="Greenify Logo" class="logo" />
         <span class="text">Greenify</span>
       </div>
+      </div>
 
-      <!-- Navigation -->
+     <div class="group">
+
+      <!-- Theme Toggle Button -->
+      <button id="themeToggle" class="theme-toggle">🌙</button>
+ <!-- Navigation -->
       <nav class="navigation" id="navMenu">
         <a href="home.html">Home</a>
         <a href="signup.html">Signup</a>
         <a href="about.html">About</a>
       </nav>
-
-      <!-- Theme Toggle Button -->
-      <button id="themeToggle" class="theme-toggle">🌙</button>
-
       <!-- Profile Dropdown -->
       <div class="profile-container">
         <button id="dropdownBtn" class="profile-btn">
@@ -49,6 +51,7 @@
            <a href="about.html">About us </a>
           <a href="#">Logout</a>
         </div>
+      </div>
       </div>
     </header>
 
@@ -293,7 +296,6 @@
     </script>
   </body>
 </html>
-
 
 
 
