--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
       <div class="hero-text">
         <h1>Environmental Studies for Students</h1>
         <p>
-          Learn how to protect the environment and make the world a greener
-          place.
+          Greenify is a gamified learning platform designed to make environmental education engaging, interactive, and impactful. It transforms theoretical knowledge into practical eco-friendly actions through missions, challenges, and rewards. By integrating learning with real-world behavior change, Greenify bridges the gap between awareness and action.
         </p>
         <button onclick="goToHomepage()">Explore Now 🚀</button>
       </div>
@@ -296,6 +295,7 @@
     </script>
   </body>
 </html>
+
 
 
 
