--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       <!-- Brand: Logo + Text -->
       <div class="brand">
         <img src="logo-modified.png" alt="Greenify Logo" class="logo" />
-        <span class="text">Greenify</span>
+        <span class="text">
+          <h2>Greenify</h2>
+        </span>
       </div>
     
 
@@ -58,9 +60,10 @@
     <section class="hero">
       <div class="hero-text">
         <h1>Environmental Studies for Students</h1>
-        <p>
+        <h2>
           Greenify is a gamified learning platform designed to make environmental education engaging, interactive, and impactful. It transforms theoretical knowledge into practical eco-friendly actions through missions, challenges, and rewards. By integrating learning with real-world behavior change, Greenify bridges the gap between awareness and action.
-        </p>
+        </h2>
+        
         <button onclick="goToHomepage()">Explore Now 🚀</button>
       </div>
       <div class="hero-image">
@@ -295,6 +298,7 @@
     </script>
   </body>
 </html>
+
 
 
 
