--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="hero-text">
         <h1>Environmental Studies for Students</h1>
         <h2>
-          Greenify is a gamified learning platform designed to make environmental education engaging, interactive, and impactful. It transforms theoretical knowledge into practical eco-friendly actions through missions, challenges, and rewards. By integrating learning with real-world behavior change, Greenify bridges the gap between awareness and action.
+          Greenify is a gamified learning platform designed to make environmental education engaging, interactive, and impactful.
         </h2>
         
         <button onclick="goToHomepage()">Explore Now 🚀</button>
@@ -298,6 +298,7 @@
     </script>
   </body>
 </html>
+
 
 
 
