--- a/module3.html
+++ b/module3.html
@@ -36,14 +36,13 @@
                         href="homepage2.html"> Home</a>
                     <a class="text-base font-medium leading-normal text-[var(--primary-color)]" href="#">Modules</a>
                 </div>
-                       <!-- Back Button -->
-            <a href="modulecontent2.HTML">
-              <button
-                class="flex items-center px-4 py-2 rounded-full bg-gray-200 text-gray-800 hover:bg-gray-300 dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600 transition-all w-full sm:w-auto"
-              >
-                ⬅ Back
-              </button>
-            </a>
+                <!-- Back Button -->
+                <a href="modulecontent2.HTML">
+                    <button
+                        class="flex items-center px-4 py-2 rounded-full bg-gray-200 text-gray-800 hover:bg-gray-300 dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600 transition-all w-full sm:w-auto">
+                        ⬅ Back
+                    </button>
+                </a>
 
                 <div class="flex items-center gap-4">
                     <button
@@ -67,8 +66,7 @@
             </header>
 
             <!-- Mobile Menu -->
-            <div id="mobile-menu"
-                class="hidden md:hidden flex-col bg-white border-b border-[#e0e7e0] px-6 py-4">
+            <div id="mobile-menu" class="hidden md:hidden flex-col bg-white border-b border-[#e0e7e0] px-6 py-4">
                 <a href="homepage2.html"
                     class="block py-2 text-[#374137] font-medium hover:text-[var(--primary-color)]">Home</a>
                 <a href="#" class="block py-2 text-[var(--primary-color)] font-medium">Modules</a>
@@ -92,7 +90,8 @@
                                 </div>
                                 <div class="p-5 flex flex-col flex-1 gap-2">
                                     <h3 class="text-[#111811] text-lg font-bold">Water Pollution </h3>
-                                    <p class="text-[#638863] text-sm font-normal">Explore the causes and effects of water
+                                    <p class="text-[#638863] text-sm font-normal">Explore the causes and effects of
+                                        water
                                         pollution and its impact on ecosystems.</p>
                                 </div>
                             </div>
@@ -150,7 +149,16 @@
                             </div>
                         </div>
                     </a>
-
+                    <a href="quiz 19.html">
+                        <div
+                            class="flex flex-col items-center justify-center gap-4 rounded-lg bg-white border-2 border-dashed border-[#A0D2A0] shadow-sm hover:shadow-lg transition-shadow duration-300 overflow-hidden group cursor-pointer hover:bg-[#F0FFF0]">
+                            <div class="flex flex-col items-center justify-center h-full p-6 text-center">
+                                <span class="material-symbols-outlined text-5xl text-[#228B22] mb-4">quiz</span>
+                                <h3 class="text-[#111811] text-lg font-bold">Go to Quizzes</h3>
+                                <p class="text-[#638863] text-sm mt-1">Test your knowledge across all modules.</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -171,4 +179,3 @@
 </body>
 
 </html>
-
